Fixed attachments gap

--- a/public/app/style.css
+++ b/public/app/style.css
@@ -87,6 +87,9 @@ body {
     flex-wrap: wrap;
     gap: 6px;
 }
+.message-attachments:empty {
+    display: none;
+}
 span.username:not(:hover) ~ span.discriminator:not(.stay-visible, :hover) {
     display: none;
 }
